--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.bytebay</groupId>
-    <artifactId>bytebay-workshop-registration</artifactId>
+    <groupId>patterns42</groupId>
+    <artifactId>segfault-workshop-registration</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <mainClass>pl.bytebay.workshops.Application</mainClass>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <version.sparkjava>2.7.1</version.sparkjava>
-        <appName>bytebay-reg-stagin</appName>
+        <mainClass>patterns42.workshops.Application</mainClass>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <appName>segfault-registration-staging</appName>
     </properties>
 
     <dependencyManagement>
@@ -23,7 +22,7 @@
                 <groupId>org.jdbi</groupId>
                 <artifactId>jdbi3-bom</artifactId>
                 <type>pom</type>
-                <version>3.1.0</version>
+                <version>3.6.0</version>
                 <scope>import</scope>
             </dependency>
         </dependencies>
@@ -31,14 +30,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.sparkjava</groupId>
-            <artifactId>spark-core</artifactId>
-            <version>${version.sparkjava}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sparkjava</groupId>
-            <artifactId>spark-template-handlebars</artifactId>
-            <version>${version.sparkjava}</version>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <dependency>
             <groupId>org.jdbi</groupId>
@@ -51,33 +45,28 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.1</version>
+            <version>42.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.13</version>
+            <version>1.7.25</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.20</version>
+            <version>1.18.6</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.9.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.4</version>
+            <version>2.9.8</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.9.4</version>
+            <version>2.9.8</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -99,7 +88,6 @@
             <version>2.6.3</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <repositories>
@@ -139,18 +127,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <configuration>
-                    <mainClass>${mainClass}</mainClass>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
-                <version>2.0.3</version>
+                <version>2.0.6</version>
                 <configuration>
                     <appName>${appName}</appName>
                     <includeTarget>false</includeTarget>
