--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <appName>segfault-registration-staging</appName>
+        <version.javalin>2.6.0</version.javalin>
+        <version.jackson>2.9.4</version.jackson>
+        <version.jdbi>3.6.0</version.jdbi>
+        <version.postgresql>42.2.5</version.postgresql>
+        <version.lombok>1.18.6</version.lombok>
+        <version.slf4j>1.7.25</version.slf4j>
     </properties>
 
     <dependencyManagement>
@@ -22,7 +28,7 @@
                 <groupId>org.jdbi</groupId>
                 <artifactId>jdbi3-bom</artifactId>
                 <type>pom</type>
-                <version>3.6.0</version>
+                <version>${version.jdbi}</version>
                 <scope>import</scope>
             </dependency>
         </dependencies>
@@ -32,7 +38,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
-            <version>2.6.0</version>
+            <version>${version.javalin}</version>
         </dependency>
         <dependency>
             <groupId>org.jdbi</groupId>
@@ -45,28 +51,33 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.5</version>
+            <version>${version.postgresql}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
+            <version>${version.slf4j}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.6</version>
+            <version>${version.lombok}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
+            <version>${version.jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${version.jackson}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.9.8</version>
+            <version>${version.jackson}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
