--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <appName>segfault-registration-staging</appName>
         <version.javalin>2.6.0</version.javalin>
+        <version.jtwig>5.87.0.RELEASE</version.jtwig>
         <version.jackson>2.9.4</version.jackson>
         <version.jdbi>3.6.0</version.jdbi>
         <version.postgresql>42.2.5</version.postgresql>
@@ -41,8 +42,17 @@
             <version>${version.javalin}</version>
         </dependency>
         <dependency>
+            <groupId>org.jtwig</groupId>
+            <artifactId>jtwig-core</artifactId>
+            <version>${version.jtwig}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-sqlobject</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jdbi</groupId>
