--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <appName>segfault-reg</appName>
         <mainClass>patterns42.workshops.Application</mainClass>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <appName>segfault-registration-staging</appName>
         <version.javalin>2.6.0</version.javalin>
         <version.jtwig>5.87.0.RELEASE</version.jtwig>
         <version.jackson>2.9.8</version.jackson>
@@ -153,6 +153,7 @@
                 <version>2.0.6</version>
                 <configuration>
                     <appName>${appName}</appName>
+                    <jdkVersion>11</jdkVersion>
                     <includeTarget>false</includeTarget>
                     <includes>
                         <include>target/${project.artifactId}.jar</include>
