--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <appName>segfault-reg</appName>
-        <mainClass>patterns42.workshops.Application</mainClass>
+        <exec.mainClass>patterns42.workshops.Application</exec.mainClass>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <version.javalin>2.8.0</version.javalin>
@@ -135,7 +135,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>${mainClass}</Main-Class>
+                                        <Main-Class>${exec.mainClass}</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
