Adjusting session capacity for overflow sessions

--- a/src/main/resources/session-data/schedule.yml
+++ b/src/main/resources/session-data/schedule.yml
@@ -404,7 +404,7 @@ konferencjach w Polsce.&lt;/p&gt;
 "
             photo: "http://segfault.events/sites/warszawa2020/speakers/zbyszko-papierski/zbyszko-papierski.jpg"
       - title: "DeepLearning dla programistów Javy"
-        session: "Serwis"
+        session: "Warsztat"
         seats: 16
         abstract: ""
       - title: "Dobrze wypaść w roli prelegenta"
